--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -9,13 +9,13 @@
 
     <ItemGroup>
       <PackageReference Include="EFCore.NamingConventions" Version="7.0.0" />
-      <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.0-preview.92" />
-      <PackageReference Include="HotChocolate.Data" Version="13.0.0-preview.92" />
-      <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.0.0-preview.92" />
-      <PackageReference Include="HotChocolate.Types.Analyzers" Version="13.0.0-preview.92">
+      <PackageReference Include="HotChocolate.AspNetCore" Version="14.1.0" />
+      <PackageReference Include="HotChocolate.Data" Version="14.1.0" />
+      <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.1.0" />
+      <PackageReference Include="HotChocolate.Types.Analyzers" Version="14.1.0">
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="HotChocolate.Types.Scalars" Version="13.0.0-preview.92" />
+      <PackageReference Include="HotChocolate.Types.Scalars" Version="14.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
